--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,9 @@ update-manager (1:0.120) karmic; urgency=low
     upgrade mode
   * tests/test_sources_list.py:
     - update tests for apt-torrent style uris (LP: #365537)
+  * DistUpgrade/DistUpgrade.cfg:
+    - remove edubuntu-desktop from the flavour metapackages, its
+      not its own flavour anymore
 
  --
 
