* help/C/update-manager-C.omf:   - point to file:/usr/share/gnome/help/update-manager/C/update-manager.xml     (LP: #368140)

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,9 @@ update-manager (1:0.120) karmic; urgency=low
   * DistUpgrade/DistUpgrade.cfg:
     - remove edubuntu-desktop from the flavour metapackages, its
       not its own flavour anymore
+  * help/C/update-manager-C.omf:
+    - point to file:/usr/share/gnome/help/update-manager/C/update-manager.xml
+      (LP: #368140)
 
  --
 
