* DistUpgrade/DistUpgradeQuirks.py:   - move the kubuntu-kde4-desktop key dependency transition     detection to the from_hardy quirks handler (LP: #368459)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.111.10) UNRELEASEDjaunty-proposed; urgency=low
+
+  * DistUpgrade/DistUpgradeQuirks.py:
+    - move the kubuntu-kde4-desktop key dependency transition
+      detection to the from_hardy quirks handler (LP: #368459)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 29 Apr 2009 15:50:57 +0200
+
 update-manager (1:0.111.9) jaunty-proposed; urgency=low
 
   * DistUpgrade/DistUpgradeCache.py:
