* debian/control, debian/auto-upgrade-tester.install:   - build auto-upgrade-tester package * AutoUpgradeTester/UpgradeTestBackend*.py,   AutoUpgradeTester/automatic-upgrade-testing:   - make it find its modules when installed system wide

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,8 @@ update-manager (1:0.121) UNRELEASEDkarmic; urgency=low
     - after updating the sources.list, check for both existance
       and downloadability of the BaseMetaPkgs and abort if that
       is not the case (thanks to Ulrich Kalkkuhl) LP: #370062
+  * debian/control:
+    - build auto-upgrade-tester package
   * UpdateManager/UpdateManager.py:
     - show origin field for other updates (like PPAs) to make it
       easier to see what comes from where (part of the 
