--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+update-manager (1:0.124.12) unreleased; urgency=low
+
+  * typo fixes (thanks to Brian Murray, LP: #423409)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 02 Sep 2009 13:53:18 -0700
+
 update-manager (1:0.124.11) karmic; urgency=low
 
   * DistUpgrade/DistUpgradeApport.py:
