--- a/debian/changelog
+++ b/debian/changelog
@@ -531,7 +531,7 @@ update-manager (1:0.99) jaunty; urgency=low
     - create /var/lib/pycentral/pkgremove before the upgrade to
       help pycentral transition to the new python policy (thanks
       to doko)
-  * ensure pidgin-libnotify is ugpraded (LP: #332328)
+  * ensure pidgin-libnotify is upgraded (LP: #332328)
   * better wording for aborts (thanks to Gabor Kelemen and
     Jean-Baptiste Lallement), LP: #289303
   * wording fixes, thanks to Brian Murray and Gabor Kelemen 
@@ -795,7 +795,7 @@ update-manager (1:0.95.1) jaunty; urgency=low
     - when a meta package can not be upgraded, show a proper
       error message with the package in question
   * DistUpgrade/DistUpgradeQuirks.py:
-    - abort ugprade from hardy if evms is used in /proc/mounts
+    - abort upgrade from hardy if evms is used in /proc/mounts
       evms got removed from the archive in intrepid (LP: #292179)
     - do not add "relatime" if "noatime" is already given (thanks
       to  Ken Geis)
