--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,16 @@
 update-manager (1:0.125) UNRELEASEDkarmic; urgency=low
 
+  [ Michael Vogt ]
   * integrate base-installer as a sub-component into the
     release upgrader and use the base-installer/kernel/*.sh
     functionality to ensure we select the most appropriate
     kernel on upgrade
     NOT TESTED YET
   
- -- Michael Vogt <egon@top.ping.de>  Fri, 04 Sep 2009 21:21:09 +0200
+  [ Josh Holland ]
+  * Fixed several typos (LP: #93804, LP: #277731, LP: #404435)
+
+ -- Josh Holland <jrh@joshh.co.uk>  Sun, 06 Sep 2009 11:34:11 +0100
 
 update-manager (1:0.124.11) karmic; urgency=low
 
