--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ update-manager (1:0.126.5) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeView.py
     - add waitChild implementation from python-apt to ensure
       its working for buggy hardy python-apt
+  * debian/control:
+    - updated to the karmic branch
   
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 20 Oct 2009 16:20:46 +0200
 
