--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ update-manager (1:0.126.6) UNRELEASED; urgency=low
 
   * debian/control:
     - updated to point the karmic branch
+  * UpdateManager/GtkProgress.py:
+    - fix small cosmetic problem with the release-upgrader
+      download window size
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 21 Oct 2009 09:39:52 +0200
 
